<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="background">background</string>
    <string name="logo">Logo</string>
    <string name="Slogan" translatable="false">Find a nice restaurant and invite your co-workers for lunch!</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1635588596605227</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb1635588596605227</string>

    <!-- TWITTER PURPOSE -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">7XbUKyrbUvuEKVP84dQyW9NoW</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">BjP0MquWe11OnNdnj0y9KOsUl1sV8LuHjpMEEzqOIezpNAOXl7</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="MapView">Map View</string>
    <string name="ListView">List View</string>
    <string name="Workmates">Workmates</string>
    <string name="i_m_hungry">I\'m Hungry!</string>

    <!-- GOOGLE MAPS API KEY -->
    <string name="google_maps_API_key" translatable="false">AIzaSyAcRMUsc5zeKZG5sxZz7-dk-CeT7PtudKA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \\\'my location\' layer. Please try again and grant access to use the location. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="info_no_email_found">No email was found</string>
    <string name="info_no_username_found">No username was found</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="default_notification_channel_id" translatable="false">17</string>
    <string name="choix_de_la_langue">Choose language</string>
    <string name="Info">No information</string>

    <string name="channel_name" translatable="false">My Channel</string>
    <string name="channel_description" translatable="false">description</string>
    <string name="notif_choice">"You're eating at "</string>
    <string name="notif_with">" with "</string>
    <string name="connected">Already logged in</string>
    <string name="enable_notifications">Enable notifications :</string>

</resources>